--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-     <link rel="stylesheet" href="testi.css">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <style>     
  @font-face { font-family: SF Pro; src: url('SFPRODISPLAYREGULAR.OTF'); } 
     .sfpro { font-family: SF Pro; font-size: 2.2em; }
+    body {
+      background: linear-gradient(145deg, #ffffff, #f0f0f0);
+      box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
      </style>
      <title>SPODWE1 - Atividades de Desenvolvimento Web </title>
 </head>
-<body style="background-color:rgba(246, 244, 244, 0.523);">
+<body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
     <div class="container-fluid">
@@ -50,35 +53,98 @@
     <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
     Atividade 1
     </div>
-    <img  src="shape1.gif" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+    <img  src="https://i.ibb.co/DHrwnRdY/image-fx-2025-01-30-T153233-688.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
     <div class="card-body">
-      <h5 class="card-title">Nome da atividade</h5>
-      <p class="card-text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum.</p>
-      <a href="#" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      <h5 class="card-title">Protótipo do Portfólio</h5>
+      <a href="https://github.com/isaque-santana/SPODWE1---Atividades-de-Desenvolvimento-Web/blob/master/Atividades/A2%20(Prot%C3%B3tipo%20do%20Portf%C3%B3lio)/prototipo_portfolio.png" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
     </div>
   </div>
     <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
     <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
       Atividade 2
     </div>
-      <img src="shape2.gif" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <img src="https://i.ibb.co/7JFT8Cjv/image-fx-2025-01-30-T153415-892.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
       <div class="card-body">
-        <h5 class="card-title">Nome da atividade</h5>
-        <p class="card-text">lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum.</p>
-        <a href="#" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+        <h5 class="card-title">Landing Page</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A3%20%28Landing%20Page%29/index.html" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
       </div>
   </div>
   <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
     <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
       Atividade 3
     </div>
-      <img src="shape3.gif" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <img src="https://i.ibb.co/fz4ySz32/image-fx-2025-01-30-T153544-450.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
       <div class="card-body">
-        <h5 class="card-title">Nome da atividade</h5>
-        <p class="card-text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum.</p>
-        <a href="#" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+        <h5 class="card-title">Formulário CSS</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A4%20%28Formul%C3%A1rio%20CSS%29/index.html" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
       </div>
-      
-</body>
-</html>
-
+  </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 4
+    </div>
+      <img src="https://i.ibb.co/WvB8Vh1S/image-fx-2025-01-30-T153620-277.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Seletores CSS</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A5%20(Seletores%20CSS)/" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+        </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 5
+    </div>
+      <img src="https://i.ibb.co/DDZRyzgT/image-fx-2025-01-30-T153639-495.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Tema Light ou Dark</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A6%20(Tema%20Light%20ou%20Dark)/index.html" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      </div>
+  </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 6
+    </div>
+      <img src="https://i.ibb.co/VcGb6Hw0/image-fx-2025-01-30-T153933-456.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Apresentação SEO</h5>
+        <a href="https://github.com/isaque-santana/SPODWE1---Atividades-de-Desenvolvimento-Web/blob/master/Atividades/A7%20(Apresenta%C3%A7%C3%A3o%20SEO)/Apresentacao_SEO_ISAQUE.pdf" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      </div>
+  </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 7
+    </div>
+      <img src="https://i.ibb.co/t5yJTj2/image-fx-2025-01-30-T153940-064.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Flex e Grid CSS</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A8%20(Flex%20e%20Grid%20CSS)/" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      </div>
+  </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 8
+    </div>
+      <img src="https://i.ibb.co/VpjKR8Hw/image-fx-2025-01-30-T153959-736.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title"> Visualizador de Propriedade CSS </h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A9%20(Visualizador%20de%20propriedade%20CSS)/" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      </div>
+  </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 9
+    </div>
+      <img src="https://i.ibb.co/QFYcwv4K/image-fx-2025-01-30-T154017-519.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Máscara e Validação</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A10%20(M%C3%A1scara%20e%20Valida%C3%A7%C3%A3o)/" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      </div>
+  </div>
+  <div class="card text-center mt-5 mx-auto" style="width: 50rem;">
+    <div style="background-color:rgba(240, 238, 238, 0.523);" class="card-header mb-3 fs-5">
+      Atividade 10
+    </div>
+      <img src="https://i.ibb.co/TMRHTM2f/image-fx-2025-01-30-T154036-924.png" class="card-img-top mx-auto" alt="Formas 1" style="width:500px;height:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Consumo de API</h5>
+        <a href="https://isaque-santana.github.io/SPODWE1---Atividades-de-Desenvolvimento-Web/Atividades/A10%20(Consumo%20de%20API)/" class="btn btn-outline-dark"> <img src="eye.svg"> Visualizar</a>
+      </div>
+  </div>
